srm: fix some of the findbugs found bugs Most changes are trivial and obvious. FileMetaData structure used in srm 1.1 had incorrect fileId initialization in copy constructor. This patch fixes this problem.
Signed-off by: Paul
http://rb.dcache.org/r/1801/