@@ -195,7 +195,7 @@ public class SrmDCacheConnector {
             // And second is timeout in millis
             srm = (org.dcache.srm.SRM)tm.invoke(null,
             new Object[]{dCacheParams,
-            new Long(600*1000)});
+             Long.valueOf(600*1000)});
 
             System.out.println("Got instance of srm.");
             instance.configuration = srm.getConfiguration();
